# amanahacademia

./: .actrc  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  astro.config.mjs  ejemplo.html  package-lock.json  package.json  sonar-project.properties  sonar.exclusions
backend/: .dockerignore  .env.demo  Cargo.toml  Dockerfile  Makefile.toml  TESTING.md  fly.toml  pettitins.http
backend/src/: controllers.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  services.rs  state.rs  test.rs
backend/src/controller/: user.rs
backend/src/controllers/: cal.rs  comments.rs  cookies.rs  email.rs  mailchimp.rs  metrics.rs  payment.rs  payments.rs  sourvey.rs  teachers.rs  user.rs  users.rs  webhook.rs
backend/src/middleware/: auth.rs  logs.rs
backend/src/models/: cal.rs  comments.rs  cookies.rs  email.rs  error.rs  firebase.rs  mailchimp.rs  metrics.rs  response.rs  sourvey.rs  state.rs  stripe.rs  teacher.rs  user.rs  webhook.rs
backend/src/routes/: cal.rs  comments.rs  cookies.rs  email.rs  mailchimp.rs  metrics.rs  payment.rs  payments.rs  sourvey.rs  teachers.rs  user.rs  users.rs  webhooks.rs
backend/src/services/: firebase.rs  mailchimp.rs  metrics.rs  payments.rs
backend/src/test/: mod.rs  services.rs  validations.rs
backend/src/test/controllers/: cal.rs  metrics.rs
backend/src/test/helpers/: fixtures.rs
backend/src/test/middleware/: auth.rs
backend/src/test/services/: firebase.rs  metrics.rs  payments.rs
backend/src/test/validations/: validations.rs
backend/src/utils/: validations.rs
backend/src/validations/: validations.rs
(+208 files in other folders)
