[package]
name = "amanahacademia"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
hyper = "0.14"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
dotenvy = "0.15"
tokio-stream = "0.1"
jsonwebtoken = "8.1"
reqwest = { version = "0.11", features = ["json"] }
axum-extra = "0.9"
headers = "0.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = "0.4"
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
time = "0.3"